OTP and ForgotPass API

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DB_PASS=
 DB_NAME=stylique
 JWT_SECRET=stylique_secret
 PORT=3000
+EMAIL_USER=styliquedynamics@gmail.com
+EMAIL_PASS=duib lhvt azyo pwhd
