--- a/Stylique/package.json
+++ b/Stylique/package.json
@@ -54,21 +54,22 @@
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-ratings": "^8.1.0",
     "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-razorpay": "^2.3.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-star-rating-widget": "^1.9.2",
     "react-native-stars": "^1.2.2",
+    "react-native-svg": "15.12.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "router": "^2.2.0",
     "tailwindcss": "^3.4.17",
-    "yup": "^1.7.0",
-    "react-native-worklets": "0.5.1",
-    "react-native-svg": "15.12.1"
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
