--- a/Stylique/package.json
+++ b/Stylique/package.json
@@ -22,30 +22,30 @@
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.11.0",
     "credit-card-type": "^10.1.0",
-    "expo": "^54.0.2",
+    "expo": "54.0.23",
     "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.8",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
+    "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-random": "^14.0.1",
-    "expo-router": "~6.0.1",
+    "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
-    "expo-splash-screen": "~31.0.9",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
+    "expo-system-ui": "~6.0.8",
+    "expo-web-browser": "~15.0.9",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -54,8 +54,7 @@
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-ratings": "^8.1.0",
     "react-native-raw-bottom-sheet": "^3.0.0",
-    "react-native-razorpay": "^2.3.1",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-select-dropdown": "^4.0.1",
@@ -69,6 +68,7 @@
     "react-native-worklets": "0.5.1",
     "router": "^2.2.0",
     "tailwindcss": "^3.4.17",
+    "undefined": "\\",
     "yup": "^1.7.0"
   },
   "devDependencies": {
