--- a/Stylique/app.json
+++ b/Stylique/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Stylique",
-    "slug": "Stylique",
+    "slug": "stylique",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -17,7 +17,10 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "softwareKeyboardLayoutMode": "resize"
+      "softwareKeyboardLayoutMode": "resize",
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "bundler": "metro",
@@ -46,6 +49,13 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "10cd37d8-7e88-4f82-bb46-e6263e641cc6"
+      }
+    },
+    "owner": "test25"
   }
 }
