--- a/Stylique/package.json
+++ b/Stylique/package.json
@@ -31,6 +31,7 @@
     "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.13",
     "expo-random": "^14.0.1",
     "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
