--- a/Stylique/app.json
+++ b/Stylique/app.json
@@ -19,8 +19,10 @@
       "edgeToEdgeEnabled": true,
       "softwareKeyboardLayoutMode": "resize",
       "permissions": [
+        "android.permission.RECORD_AUDIO",
         "android.permission.RECORD_AUDIO"
-      ]
+      ],
+      "package": "com.test25.stylique"
     },
     "web": {
       "bundler": "metro",
