--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,7 +9,8 @@
     "start": "node src/server.js",
     "prisma:generate": "npx prisma generate",
     "prisma:migrate": "npx prisma migrate dev --name init",
-    "prisma:studio": "npx prisma studio"
+    "prisma:studio": "npx prisma studio",
+    "sync": "npx prisma db push && nodemon src/server.js"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
