--- a/Stylique/package.json
+++ b/Stylique/package.json
@@ -51,6 +51,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-pager-view": "^6.9.1",
     "react-native-paper": "^5.14.5",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-ratings": "^8.1.0",
@@ -63,6 +64,7 @@
     "react-native-stars": "^1.2.2",
     "react-native-svg": "15.12.1",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-tab-view": "^4.2.0",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
