--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,5 @@
 DATABASE_URL="mysql://root:Admin@123@localhost:3306/Sellerdb"
 # Server port
 PORT=5001
+EMAIL_USER=styliquedynamics@gmail.com
+EMAIL_PASS=duib lhvt azyo pwhd
