--- a/Stylique/package.json
+++ b/Stylique/package.json
@@ -15,14 +15,14 @@
     "@gorhom/bottom-sheet": "^5.2.4",
     "@kolking/react-native-rating": "^1.4.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.11.0",
     "credit-card-type": "^10.1.0",
-    "expo": "54.0.23",
+    "expo": "~54.0.25",
     "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.8",
