--- a/Stylique/app.json
+++ b/Stylique/app.json
@@ -36,7 +36,7 @@
         {
           "image": "./assets/images/Stylique_Logo.png",
           "imageWidth": 200,
-          "resizeMode": "contain",
+          "contentFit": "contain",
           "backgroundColor": "#ffffff"
           
         }
