--- a/Stylique/package.json
+++ b/Stylique/package.json
@@ -20,12 +20,15 @@
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@tanstack/react-query": "^5.90.12",
     "axios": "^1.11.0",
     "credit-card-type": "^10.1.0",
     "expo": "~54.0.25",
     "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.8",
+    "expo-dev-client": "~6.0.18",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
@@ -35,6 +38,7 @@
     "expo-random": "^14.0.1",
     "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
+    "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
