--- a/Backend/.env
+++ b/Backend/.env
@@ -3,5 +3,7 @@
 DATABASE_URL="mysql://root:Admin@123@localhost:3306/Sellerdb"
 # Server port
 PORT=5001
-EMAIL_USER=styliquedynamics@gmail.com
-EMAIL_PASS=duib lhvt azyo pwhd
+EMAIL_USER=info.stylique.test@gmail.com
+EMAIL_PASS=bksl nhsi umxy fieo
+RAZORPAY_KEY_ID=rzp_test_RvSiGcYANyVLlF
+RAZORPAY_KEY_SECRET=mxP2taKt0GSPUw7FxJTeKYne
