--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.11",
     "pdfkit": "^0.17.2",
-    "pdfkit-table": "^0.1.99"
+    "pdfkit-table": "^0.1.99",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
