--- a/Stylique/package.json
+++ b/Stylique/package.json
@@ -60,6 +60,7 @@
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-ratings": "^8.1.0",
     "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-razorpay": "^2.3.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
