--- a/project/package.json
+++ b/project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.15",
     "axios": "^1.7.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
