--- a/Backend/.env
+++ b/Backend/.env
@@ -7,3 +7,7 @@ EMAIL_USER=info.stylique.test@gmail.com
 EMAIL_PASS=bksl nhsi umxy fieo
 RAZORPAY_KEY_ID=rzp_test_RvSiGcYANyVLlF
 RAZORPAY_KEY_SECRET=mxP2taKt0GSPUw7FxJTeKYne
+
+# Shiprocket API
+SHIPROCKET_EMAIL=Stylique@gmail.com
+SHIPROCKET_PASSWORD=CeZ&C4pL3^VsBp%HrcdRN2QQhJ3c$hpI
