--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -17,3 +17,7 @@ RAZORPAY_KEY_SECRET="your-key-secret"
 
 # Optional: Seller Email for specific notifications (defaults to EMAIL_USER)
 # SELLER_EMAIL="seller@example.com"
+
+# Shiprocket API (for shipping integration)
+SHIPROCKET_EMAIL="your-api-user@email.com"
+SHIPROCKET_PASSWORD="your-api-password"
